--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -2,11 +2,30 @@ set(EXE_SRC "main.cpp")
 
 add_executable(${EXE_NAME} ${EXE_SRC})
 
-target_link_libraries(${EXE_NAME} PRIVATE ${LIB_NAME} nlohmann_json)
+target_link_libraries(${EXE_NAME} 
+    PRIVATE "LibFoo"
+            "LibBar"
+            nlohmann_json::nlohmann_json
+            fmt::fmt
+            spdlog::spdlog
+            cxxopts::cxxopts)
 
 if(${ENABLE_WARNINGS})
-    target_set_warnings(${EXE_NAME} ${ENABLE_WARNINGS}
-                        ${ENABLE_WARNINGS_AS_ERRORS})
+    target_set_warnings(
+        TARGET
+        ${EXE_NAME}
+        ENABLE
+        ${ENABLE_WARNINGS}
+        AS_ERRORS
+        ${ENABLE_WARNINGS_AS_ERRORS})
+endif()
+
+if(${ENABLE_LTO})
+    target_enable_lto(
+        TARGET
+        ${EXE_NAME}
+        ENABLE
+        ON)
 endif()
 
 if(${ENABLE_CLANG_TIDY})
